
PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5087 e2e Native3 failing after PIG-4923 (knoguchi)

PIG-5073: Skip e2e Limit_5 test for Tez (knoguchi)

PIG-5072: e2e Union_12 fails on typecast when oldpig=0.11 (knoguchi)

PIG-3891: FileBasedOutputSizeReader does not calculate size of files in sub-directories (nkollar via rohini)

PIG-5070: Allow Grunt e2e tests to run in parallel (knoguchi)

PIG-5061: ant test -Dtestcase=TestBoolean failing (knoguchi)

PIG-5066: e2e Jython_Checkin_2 failing due to floating precision difference (knoguchi)

PIG-5063: e2e IOErrors_1 on mapreduce is unstable (knoguchi)

PIG-5062: Allow Native e2e tests to run in parallel (knoguchi)

PIG-5060: TestPigRunner.testDisablePigCounters2 failing with tez (knoguchi)

PIG-5056: Fix AvroStorage writing enums (szita via daijy)

PIG-5055: Infinite loop with join by fixed index (knoguchi)

PIG-5049: Cleanup e2e tests turing_jython.conf (Daniel Dai)

PIG-5033: MultiQueryOptimizerTez creates bad plan with union, split and FRJoin (rohini,tmwoordruff via rohini)

PIG-4934: SET command does not work well with deprecated settings (szita via daijy)

PIG-4798: big integer literals fail to parse (szita via daijy)

PIG-5045: CSVExcelStorage Load: A Quoted Field with a Single Escaped Quote """" Becomes "" This should become " instead
  (szita via daijy)

PIG-5026: Remove src/META-INF/services/org.apache.hadoop.mapreduce.protocol.ClientProtocolProvider (nkollar via daijy)

PIG-5041: RoundRobinPartitioner is not deterministic when order of input records change (rohini)

PIG-5040: Order by and CROSS partitioning is not deterministic due to usage of Random (rohini
