@@ -73,7 +73,9 @@ OPTIMIZATIONS
  
 BUG FIXES
 
-PIG-5087 e2e Native3 failing after PIG-4923 (knoguchi)
+PIG-5083: CombinerPackager and LitePackager should not materialize bags (rohini)
+
+PIG-5087: e2e Native3 failing after PIG-4923 (knoguchi)
 
 PIG-5073: Skip e2e Limit_5 test for Tez (knoguchi)
 
